# dsmath_notes

./: .conform.1639675.Julia2andLanguage_notes.qmd  .gitattributes  .gitignore  .vdoc.085ac105-91f4-4616-886b-9944bc19dacc.py  Circles.jl  Ito_Lemma.qmd  Julia2ndLanguage_notes.ipynb  Julia2ndLanguage_notes.ipynb.bak  LearnDataSci_2023_OReilly.ipynb  LearnDataSci_2023_OReilly.qmd  Lorenz.jl  Manifest-v1.12.toml  Manifest.toml  MultivariateAR1_StochasticVolatilityModel.ipynb  MultivariateAR1_StochasticVolatilityModel.md  Project.toml  Reflected Ornstein-Uhlenbeck Process.qmd  SimulatingInterestRateChanges.ipynb  SimulatingInterestRateChanges.qmd  Untitled.md  _environment.yml  _quarto.yml  assumptions.ipynb  assumptions.ipynb.bak  assumptions.ipynb.otter.py  assumptions.md  assumptions.qmd  backward_elimination_linear_models.jl  bsm.jl  casaul_drug.md  circles_jl.ipynb  code_smells.qmd  consistency.qmd  covariance_ex_jl.html  covariance_ex_jl.qmd  cuda_test.ipynb  cuda_test.md  example.py  expected_value.qmd  fib.jl  (+27 more)
.jupyter_cache/: global.db
_output/: circles_jl.html
data/: .zsh_local_history  3featureData.csv  IQalc.csv  L1L2data.csv  SkewNormData.csv  SkewNormData2.csv  anscombe.json  companyData.csv  earth.txt  examData.csv  fertilizer.csv  fileList.txt  jsonCode.json  machine1.csv  machine2.csv  machine3.csv  mnistConv.bson  mnistGAN40.bson  mvParams.jl  oneOnEpsilonBlogs.csv  polynomialData.csv  purchaseData.csv  purchaseDataImputed.csv  svmlog.txt  temperatures.csv  waterLines.txt  (+1 more)
setosa/: pyproject.toml
setosa/src/: model.py
setosa/src/setosa/: __init__.py
(+145 files in other folders)
