[project]
name = "setosa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eo1989", email = "7108365+eo1989@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
